# jwst-fgs-countrate

./: .gitignore  Jenkinsfile  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
docs/fgscountrate/: index.rst
fgscountrate/: __init__.py  _astropy_init.py  conftest.py  constants.py  conversions.py  fgs_countrate_core.py  utils.py
fgscountrate/example_subpkg/: setup_package.py
fgscountrate/tests/: test_calc_cr_mag.py  test_convert_countrate.py  test_convert_jhk.py  test_query.py
