[metadata]
name = fgscountrate
package_name = fgscountrate
description = JWST FGS countrate estimation
long_description = JWST FGS countrate estimation and related functionality.
author = Space Telescope Science Institute
author_email = help@stsci.edu
license = Aura
url = http://stsci.edu
edit_on_github = False
github_project = spacetelescope/jwst-fgs-countrate
minimum_python_version = 3.8

[options]
packages = find:
zip_safe = False
python_requires = >=3.8
include_package_data = True
install_requires =
    pandas
    numpy
    requests

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py
